Replace service_id with service_name
